replace javax.xml.bind.DatatypeConverter with java.util.Base64 and (#13) (#58)
enforce source/target version to 1.8

Change-Id: Iab3b9f7184ba2433c64460957b761a7521a7a5dd