@@ -8,10 +8,10 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.Base64;
 
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLSocketFactory;
-import javax.xml.bind.DatatypeConverter;
 
 import com.google.gson.JsonSyntaxException;
 
@@ -54,8 +54,9 @@ extends AbstractClient {
 		connection = openConnection(destination);
 
 		if (user != null && password != null) {
-			String base64 = DatatypeConverter
-				.printBase64Binary((user + ":" + password).getBytes(ENCODING));
+			byte[] encodedBytes = Base64.getMimeEncoder()
+				.encode((user + ":" + password).getBytes(ENCODING));
+			String base64 = new String(encodedBytes, ENCODING);
 			connection.setRequestProperty("Authorization", "Basic " + base64);
 		}
 		else if (sslSocketFactory != null && connection instanceof HttpsURLConnection) {
